# UAVLogViewerChatbot

./: .gitignore  package-lock.json
ai/: .env.example  README.md  main.py  pyproject.toml
ai/agent/: agent.py  model.py  prompts.py  schema.py
ai/chatbot/: router.py  schema.py
ai/common/: downsample_logs.py  parse_messages.py  statistics.py
ai/common/models/: message.py  uavlog.py
ai/data/: db.py  fetch_log_messages.py  fetch_logs.py  reference_doc.html  save_data.py  upload_reference_doc.py  vector_store.py
ai/uavlogs/: router.py  schema.py
src/components/: CesiumViewer.vue  Chatbot.vue  Globals.js  Home.vue  SideBarFileManager.vue
